--- a/index.html
+++ b/index.html
@@ -1757,7 +1757,7 @@
         >
           <div class="flex-container _grid-container __grid-container-sp">
             <p>
-              <a href="about.html" style="text-decoration: underline">About</a>
+              <a href="about.html">About</a>
             </p>
 
             <p>
@@ -1765,6 +1765,15 @@
                 >baongoctrng483@gmail.com</a
               >
             </p>
+
+            <p>
+              <a href="https://drive.google.com/file/d/1JO3taj5WBCPlJX-Pxh1UAlOhwsfYV_Yb/view?usp=drive_link">CV</a>
+            </p>
+
+            <p>
+              <a href="https://drive.google.com/file/d/1pK8DSvHErkiFwqTdPgkLFVIxCnHWsRJg/view?usp=drive_link">Personal Statement</a>
+            </p>
+            
           </div>
 
           <div
