--- a/single-pages/remember.html
+++ b/single-pages/remember.html
@@ -1824,9 +1824,9 @@
         <nav
           class="flex-container is-justify-content-space-between is-break-sp"
         >
-          <div class="flex-container _grid-container __grid-container-sp">
+         <div class="flex-container _grid-container __grid-container-sp">
             <p>
-              <a href="about.html" style="text-decoration: underline">About</a>
+              <a href="about.html">About</a>
             </p>
 
             <p>
@@ -1834,6 +1834,15 @@
                 >baongoctrng483@gmail.com</a
               >
             </p>
+
+            <p>
+              <a href="https://drive.google.com/file/d/1JO3taj5WBCPlJX-Pxh1UAlOhwsfYV_Yb/view?usp=drive_link">CV</a>
+            </p>
+
+            <p>
+              <a href="https://drive.google.com/file/d/1pK8DSvHErkiFwqTdPgkLFVIxCnHWsRJg/view?usp=drive_link">Personal Statement</a>
+            </p>
+            
           </div>
 
           <div
