--- a/mixed_media.html
+++ b/mixed_media.html
@@ -2025,6 +2025,26 @@
               </div>
             </a>
 
+            <a href="single-pages/xanh.html" class="col-md-3">
+              <div class="card product-card">
+                <div class="card-img">
+                  <img
+                    src="assets/xanh/4e05e374-a23a-460e-b133-55959f70051d (1).jpg"
+                    class="img-fluid front-image"
+                    alt="Product 1"
+                  />
+                  <img
+                    src="assets/xanh/Capture4.PNG"
+                    class="img-fluid back-image"
+                    alt="Product 1 Hover"
+                  />
+                </div>
+                <div class="card-body text-center">
+                  <h5 class="card-title">Garden</h5>
+                </div>
+              </div>
+            </a>
+
             <!-- Repeat similar structure for other products -->
           </div>
         </div>
