git commit last final
okey

--- a/single-pages/dunghoa.html
+++ b/single-pages/dunghoa.html
@@ -2369,9 +2369,8 @@
               <div class="col-100 col-50-tablet col-100-sp">
                <div
                    class="image-container"
-                  style="padding-bottom: 66.66666666666666%"
+                  style="padding-bottom: 0%"
                 >
-                  <img src="/assets/face.png" alt="" />
                 </div>
 <br><br><br>
                 <div class="logo _row">
