--- a/engineering_project.html
+++ b/engineering_project.html
@@ -1994,9 +1994,8 @@
               <div class="col-100 col-50-tablet col-100-sp classMinus">
                 <div
                   class="image-container classMinus"
-                  style="padding-bottom: 66.66666666666666%"
+                  style="padding-bottom: 0%"
                 >
-                  <img src="/assets/face.png" alt="" />
                 </div>
                 <br /><br /><br />
                 <div class="logo _row">
