git da chinh sua
oke luon

--- a/engineering_project.html
+++ b/engineering_project.html
@@ -1922,7 +1922,7 @@
         <hr style="height: 1px; background-color: #04bf6a; opacity: 1" />
         <div class="container my-5">
           <div class="row">
-            <a href="single-pages/jerry.html" class="col-md-3">
+            <a href="single-pages/jerry.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -1942,7 +1942,7 @@
               </div>
             </a>
 
-            <a href="single-pages/owl.html" class="col-md-3">
+            <a href="single-pages/owl.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -1962,7 +1962,7 @@
               </div>
             </a>
 
-            <a href="single-pages/cat.html" class="col-md-3">
+            <a href="single-pages/cat.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -1998,8 +1998,8 @@
                 >
                 </div>
                 <br /><br /><br />
-                <div class="logo _row">
-                  <img src="/assets/newl.png" alt="" style="margin-top: 20px;"/>
+                 <div class="logo _row">
+                  <img src="/assets/newl.png" alt="" style="margin-top: px;"/>
                 </div>
                 <p class="__row textalign-center" style="margin-bottom: 20px;">Bao Ngoc</p>
               </div>
@@ -2013,7 +2013,7 @@
               <a href="mailto:baongoctrng483@gmail.com">Email me !</a>
             </p>
             <div class="_row footer-nav">
-               <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+               <div class="_row"><hr style="height:; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
 
               <div class="_row">
                 <p style="color: white"><b>Pages</b></p>
@@ -2034,7 +2034,7 @@
                 </div>
               </div>
 
-              <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row"><hr style="height:; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
               <div class="_row">
                 <p><b>Work</b></p>
                 <div
