--- a/films.html
+++ b/films.html
@@ -1913,7 +1913,7 @@
           <hr style="height: 1px; background-color: #4e9273; opacity: 1" />
         <div class="container my-5">
           <div class="row">
-            <a href="single-pages/films.html" class="col-md-3">
+            <a href="single-pages/films.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -1934,7 +1934,7 @@
                 </div>
               </div>
             </a>
-            <a href="single-pages/Babamu.html" class="col-md-3">
+            <a href="single-pages/Babamu.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -1955,7 +1955,7 @@
                 </div>
               </div>
             </a>
-            <a href="single-pages/bLM.html" class="col-md-3">
+            <a href="single-pages/bLM.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -1991,7 +1991,7 @@
                 
 
                 <div class="logo _row">
-                  <img src="/assets/newl.png" alt="" style="margin-top: 25px; margin-bottom: 10px ;" />
+                  <img src="/assets/newl.png" alt="" style="margin-top: px; margin-bottom: 10px ;" />
                 </div>
                 <p class="__row textalign-center" style="margin-bottom: 20px;">Bao Ngoc</p>
                    
@@ -2008,7 +2008,7 @@
               >
             </p>
              <div class="_row footer-nav">
-              <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row"><hr style="height:; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
 
               <div class="_row">
                 <p style="color: white;"><b>Pages</b></p>
@@ -2027,7 +2027,7 @@
                 </div>
               </div>
 
-              <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row"><hr style="height:; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
               <div class="_row">
                 <p><b>Work</b></p>
                 <div
