--- a/mixed_media.html
+++ b/mixed_media.html
@@ -1922,7 +1922,7 @@
           <h5 style="font-weight: 600" class="mb-3">Mixed Media & Others</h5>
           <hr style="height: 1px; background-color: #04bf6a; opacity: 1" />
           <div class="row">
-            <a href="single-pages/photo.html" class="col-md-3">
+            <a href="single-pages/photo.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -1945,7 +1945,7 @@
               </div>
             </a>
 
-            <a href="single-pages/novel.html" class="col-md-3">
+            <a href="single-pages/novel.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -1965,7 +1965,7 @@
               </div>
             </a>
 
-            <a href="single-pages/sculpture.html" class="col-md-3">
+            <a href="single-pages/sculpture.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -1985,7 +1985,7 @@
               </div>
             </a>
 
-            <a href="single-pages/future.html" class="col-md-3">
+            <a href="single-pages/future.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -2005,7 +2005,7 @@
               </div>
             </a>
 
-            <a href="single-pages/garden.html" class="col-md-3">
+            <a href="single-pages/garden.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -2025,7 +2025,7 @@
               </div>
             </a>
 
-            <a href="single-pages/xanh.html" class="col-md-3">
+            <a href="single-pages/xanh.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -2062,8 +2062,8 @@
                 >
                 </div>
                 <br /><br /><br />
-                <div class="logo _row">
-                  <img src="/assets/newl.png" alt="" style="margin-top: 20px;"/>
+                 <div class="logo _row">
+                  <img src="/assets/newl.png" alt="" style="margin-top: px;"/>
                 </div>
                 <p class="__row textalign-center" style="margin-bottom: 20px;">Bao Ngoc</p>
               </div>
@@ -2077,7 +2077,7 @@
               <a href="mailto:baongoctrng483@gmail.com">Email me !</a>
             </p>
             <div class="_row footer-nav">
-               <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+               <div class="_row"><hr style="height:; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
 
               <div class="_row">
                 <p style="color: white"><b>Pages</b></p>
@@ -2098,7 +2098,7 @@
                 </div>
               </div>
 
-              <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row"><hr style="height:; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
               <div class="_row">
                 <p><b>Work</b></p>
                 <div
