--- a/painting_drawing.html
+++ b/painting_drawing.html
@@ -1923,7 +1923,7 @@
         <div class="container my-5">
           <div class="row">
 
-            <a href="single-pages/emP.html" class="col-md-3">
+            <a href="single-pages/emP.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -1943,7 +1943,7 @@
               </div>
             </a>
 
-            <a href="single-pages/remember.html" class="col-md-3">
+            <a href="single-pages/remember.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -1963,7 +1963,7 @@
               </div>
             </a>
 
-            <a href="single-pages/zorn.html" class="col-md-3">
+            <a href="single-pages/zorn.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -1983,7 +1983,7 @@
               </div>
             </a>
 
-            <a href="single-pages/pomme.html" class="col-md-3">
+            <a href="single-pages/pomme.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -2003,7 +2003,7 @@
               </div>
             </a>
 
-            <a href="single-pages/dunghoa.html" class="col-md-3">
+            <a href="single-pages/dunghoa.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -2023,7 +2023,7 @@
               </div>
             </a>
 
-            <a href="single-pages/catsunlight.html" class="col-md-3">
+            <a href="single-pages/catsunlight.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -2043,7 +2043,7 @@
               </div>
             </a>
 
-            <a href="single-pages/color.html" class="col-md-3">
+            <a href="single-pages/color.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -2063,7 +2063,7 @@
               </div>
             </a>
 
-            <a href="single-pages/stilllife1.html" class="col-md-3">
+            <a href="single-pages/stilllife1.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -2083,7 +2083,7 @@
               </div>
             </a>
 
-            <a href="single-pages/stilllife2.html" class="col-md-3">
+            <a href="single-pages/stilllife2.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -2103,7 +2103,7 @@
               </div>
             </a>
 
-            <a href="single-pages/still.html" class="col-md-3">
+            <a href="single-pages/still.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -2123,7 +2123,7 @@
               </div>
             </a>
 
-            <a href="single-pages/graphite.html" class="col-md-3">
+            <a href="single-pages/graphite.html" class="col-md-4">
               <div class="card product-card">
                 <div class="card-img">
                   <img
@@ -2160,7 +2160,7 @@
                 </div>
                 <br /><br /><br />
                 <div class="logo _row">
-                  <img src="/assets/newl.png" alt="" style="margin-top: 20px;"/>
+                  <img src="/assets/newl.png" alt="" style="margin-top: px;"/>
                 </div>
                 <p class="__row textalign-center" style="margin-bottom: 20px;">Bao Ngoc</p>
               </div>
@@ -2174,7 +2174,7 @@
               <a href="mailto:baongoctrng483@gmail.com">Email me !</a>
             </p>
             <div class="_row footer-nav">
-               <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+               <div class="_row"><hr style="height:; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
 
               <div class="_row">
                 <p style="color: white"><b>Pages</b></p>
@@ -2195,7 +2195,7 @@
                 </div>
               </div>
 
-              <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row"><hr style="height:; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
               <div class="_row">
                 <p><b>Work</b></p>
                 <div
