--- a/index.html
+++ b/index.html
@@ -2338,16 +2338,20 @@
         <!-- END content_for_index -->
       </main>
     </div>
-    <footer id="footer" class="row">
+    <footer id="footer" style="width: 110% !important" class="row">
       <div class="footer-wrapper">
         <div class="flex-container is-break-tablet">
           <div id="footer-storeinfo">
             <div class="flex-container grid-container-tablet is-break-sp">
               <div class="col-100 col-50-tablet col-100-sp classMinus">
-                
-
-                <div class="logo _row">
-                  <img src="/assets/newl.png" alt="" style="margin-top: 25px; margin-bottom: 10px ;" />
+                <div
+                  class="image-container classMinus"
+                  style="padding-bottom: 0%"
+                >
+                </div>
+                <br /><br /><br />
+                 <div class="logo _row">
+                  <img src="/assets/newl.png" alt="" style="margin-top: px;"/>
                 </div>
                 <p class="__row textalign-center" style="margin-bottom: 20px;">Bao Ngoc</p>
               </div>
@@ -2358,10 +2362,10 @@
               <hr style="height: 1px; background-color: #04bf6a; opacity: 1" />
             </div>
             <p>
-              <a href="mailto:baongoctrng483@gmail.com"><b>Email me !</b></a>
+              <a href="mailto:baongoctrng483@gmail.com">Email: Baongoctrannguyen@gmai.com</a>
             </p>
             <div class="_row footer-nav">
-              <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+               <div class="_row"><hr style="height: ; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
 
               <div class="_row">
                 <p style="color: white"><b>Pages</b></p>
@@ -2382,7 +2386,7 @@
                 </div>
               </div>
 
-              <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row"><hr style="height: ; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
               <div class="_row">
                 <p><b>Work</b></p>
                 <div
