--- a/single-pages/catsunlight.html
+++ b/single-pages/catsunlight.html
@@ -2481,7 +2481,7 @@
                 </div>
                 <br /><br /><br />
                 <div class="logo _row">
-                  <img src="/assets/newl.png" alt="" style="margin-top: 25px;" />
+                  <img src="/assets/newl.png" alt="" style="margin-top: px;" />
                 </div>
                 <p class="__row textalign-center" style="margin-bottom: 20px;">Bao Ngoc</p>
               </div>
@@ -2495,7 +2495,7 @@
               <a href="mailto:baongoctrng483@gmail.com">Email me !</a>
             </p>
             <div class="_row footer-nav">
-               <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+               <div class="_row"><hr style="height:; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
 
               <div class="_row">
                 <p style="color: white"><b>Pages</b></p>
@@ -2516,7 +2516,7 @@
                 </div>
               </div>
 
-              <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row"><hr style="height:; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
               <div class="_row">
                 <p><b>Work</b></p>
                 <div
