--- a/single-pages/films.html
+++ b/single-pages/films.html
@@ -2564,8 +2564,8 @@
                 >
                 </div>
 <br><br><br>
-                <div class="logo _row">
-                  <img src="/assets/newl.png" alt="" style="margin-top: 20px;"/>
+                 <div class="logo _row">
+                  <img src="/assets/newl.png" alt="" style="margin-top: px;"/>
                 </div>
                 <p class="__row textalign-center" style="margin-bottom: 20px;">Bao Ngoc</p>
               </div>
@@ -2584,7 +2584,7 @@
               <div class="_row">
                 <hr
                   style="
-                    height: 2px;
+                    height: px;
                     background-color: #fff;
                     opacity: 1;
                     margin-left: -25px;
@@ -2614,7 +2614,7 @@
               <div class="_row">
                 <hr
                   style="
-                    height: 2px;
+                    height: px;
                     background-color: #fff;
                     opacity: 1;
                     margin-left: -25px;
