--- a/single-pages/sculpture.html
+++ b/single-pages/sculpture.html
@@ -2539,7 +2539,7 @@
                 </div>
 <br><br><br>
                 <div class="logo _row">
-                  <img src="/assets/newl.png" style="margin-top: 20px;" alt="" />
+                  <img src="/assets/newl.png" style="margin-top: px;" alt="" />
                 </div>
                 <p class="__row textalign-center" style="margin-bottom: 20px;">Bao Ngoc</p>
               </div>
@@ -2553,7 +2553,7 @@
               >
             </p>
              <div class="_row footer-nav">
-              <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row"><hr style="height:; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
 
               <div class="_row">
                 <p style="color: white;"><b>Pages</b></p>
@@ -2572,7 +2572,7 @@
                 </div>
               </div>
 
-              <div class="_row"><hr style="height: 2px; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
+              <div class="_row"><hr style="height:; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
               <div class="_row">
                 <p><b>Work</b></p>
                 <div
