--- a/single-pages/stilllife2.html
+++ b/single-pages/stilllife2.html
@@ -2386,7 +2386,7 @@
                 </div>
 <br><br><br>
                <div class="logo _row">
-                  <img src="/assets/newl.png" style="margin-top: 20px;" alt="" />
+                  <img src="/assets/newl.png" style="margin-top: px;" alt="" />
                 </div>
                 <p class="__row textalign-center" style="margin-bottom: 20px;">Bao Ngoc</p>
               </div>
@@ -2405,7 +2405,7 @@
               <div class="_row">
                 <hr
                   style="
-                    height: 2px;
+                    height: px;
                     background-color: #fff;
                     opacity: 1;
                     margin-left: -25px;
@@ -2435,7 +2435,7 @@
               <div class="_row">
                 <hr
                   style="
-                    height: 2px;
+                    height: px;
                     background-color: #fff;
                     opacity: 1;
                     margin-left: -25px;
