--- a/index.html
+++ b/index.html
@@ -2362,7 +2362,7 @@
               <hr style="height: 1px; background-color: #04bf6a; opacity: 1" />
             </div>
             <p>
-              <a href="mailto:baongoctrng483@gmail.com">Email: Baongoctrannguyen@gmai.com</a>
+              <a href="mailto:baongoctrng483@gmail.com">Email: Baongoctrng483@gmail.com</a>
             </p>
             <div class="_row footer-nav">
                <div class="_row"><hr style="height: ; background-color: #fff; opacity: 1; margin-left: -25px;" /></div>
